--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Echohaus</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="hero">
         <h1>Echohaus</h1>
-        <p>Where emotion becomes echo.</p>
+        <p class="tagline">Where emotion becomes echo.</p>
         <a href="#contact" class="btn">Contact Studio</a>
         <a href="#booking" class="btn secondary">Book a Session</a>
     </header>
@@ -42,7 +42,7 @@
 
     <footer>
         <p>Echohaus — A Glasswall Studio</p>
-        <p><a href="mailto:studio@echohaushq.com">Contact</a> | <a href="mailto:book@echohaushq.com">Booking</a></p>
+        <p><a href="#contact">Contact</a> | <a href="#booking">Booking</a></p>
     </footer>
 </body>
 </html>
