--- a/index.html
+++ b/index.html
@@ -3,46 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Echohaus</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="hero">
-        <h1>Echohaus</h1>
-        <p class="tagline">Where emotion becomes echo.</p>
-        <a href="#contact" class="btn">Contact Studio</a>
-        <a href="#booking" class="btn secondary">Book a Session</a>
-    </header>
+    <div class="container">
+        <h1 class="title">ECHOHAUS</h1>
+        <p class="tagline italic">A creative studio experience. Built on presence, not just place.</p>
 
-    <section class="about">
-        <h2>About Echohaus</h2>
-        <p>Echohaus is a remote and mobile creative studio. Built for artists who record with emotion, not just equipment. We track, mix, and develop sound wherever it hits.</p>
-    </section>
+        <p class="description">Remote sessions. Mobile tracking, <br> Artist development.</p>
 
-    <section class="services">
-        <h2>Services</h2>
-        <ul>
-            <li>Remote vocal tracking</li>
-            <li>Mobile sessions (upon request)</li>
-            <li>Mixing & polish</li>
-            <li>Creative consulting</li>
-            <li>Songwriting collaboration</li>
+        <p class="tagline italic">Echohaus <span class="italic">is</span> wherever the emotion hits.</p>
+
+        <div class="services-header">SERVICES</div>
+
+        <ul class="services">
+            <li>Mobile Recording</li>
+            <li>Vocal Coaching / Development</li>
+            <li>Mixing / Song Polish</li>
+            <li>Creative Direction</li>
         </ul>
-    </section>
 
-    <section id="contact" class="contact">
-        <h2>Contact the Studio</h2>
-        <p>Email: <a href="mailto:studio@echohaushq.com">studio@echohaushq.com</a></p>
-    </section>
+        <a href="mailto:book@echohaushq.com" class="apply-btn">APPLY NOW</a>
 
-    <section id="booking" class="booking">
-        <h2>Book a Session</h2>
-        <p>Email: <a href="mailto:book@echohaushq.com">book@echohaushq.com</a></p>
-    </section>
-
-    <footer>
-        <p>Echohaus — A Glasswall Studio</p>
-        <p><a href="#contact">Contact</a> | <a href="#booking">Booking</a></p>
-    </footer>
+        <footer>Powered by GLASSWALL</footer>
+    </div>
 </body>
 </html>
