--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Echohaus</title>
+    <title>Echohaus | Creative Studio</title>
+    <meta name="description" content="Echohaus is a mobile recording and vocal development studio powered by Glasswall.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container fade-in">
         <h1 class="title">ECHOHAUS</h1>
         <p class="tagline italic">A creative studio experience. Built on presence, not just place.</p>
 
@@ -24,7 +26,7 @@
             <li>Creative Direction</li>
         </ul>
 
-        <a href="mailto:book@echohaushq.com" class="apply-btn">APPLY NOW</a>
+        <a href="mailto:book@echohaushq.com" class="apply-btn" title="Start your creative journey with Echohaus.">APPLY NOW</a>
 
         <footer>Powered by GLASSWALL</footer>
     </div>
