--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
             <li>Creative Direction</li>
         </ul>
 
-        <a href="mailto:book@echohaushq.com" class="apply-btn" title="Start your creative journey with Echohaus.">APPLY NOW</a>
+        <div class="buttons">
+            <a href="mailto:studio@echohaushq.com" class="contact-btn" title="Reach out with questions or ideas.">CONTACT STUDIO</a>
+            <a href="mailto:book@echohaushq.com" class="apply-btn" title="Start your creative journey with Echohaus.">APPLY NOW</a>
+        </div>
 
-        <footer>Powered by GLASSWALL</footer>
+        <footer>
+            <a href="https://glasswallrecords.com" target="_blank" class="footer-link">Powered by GLASSWALL</a>
+        </footer>
     </div>
 </body>
 </html>
