--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
 
         <div class="buttons">
-            <a href="mailto:studio@echohaushq.com" class="contact-btn" title="Reach out with questions or ideas.">CONTACT STUDIO</a>
+            <a href="mailto:studio@echohaushq.com" class="contact-btn" title="Reach out with questions or ideas.">📩 CONTACT STUDIO</a>
             <a href="mailto:book@echohaushq.com" class="apply-btn" title="Start your creative journey with Echohaus.">APPLY NOW</a>
         </div>
 
