--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Echohaus | Creative Studio</title>
-    <meta name="description" content="Echohaus is a mobile recording and vocal development studio powered by Glasswall.">
+    <meta name="description" content="Echohaus is a mobile recording and vocal development studio based in Havre de Grace, Maryland. Powered by Glasswall.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="geo.region" content="US-MD">
+    <meta name="geo.placename" content="Havre de Grace">
+    <meta name="geo.position" content="39.5493;-76.0916">
+    <meta name="ICBM" content="39.5493, -76.0916">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +17,7 @@
         <h1 class="title">ECHOHAUS</h1>
         <p class="tagline italic">A creative studio experience. Built on presence, not just place.</p>
 
-        <p class="description">Remote sessions. Mobile tracking, <br> Artist development.</p>
+        <p class="description">Remote sessions. Mobile tracking, <br> Artist development. <br><br> Based in Havre de Grace, Maryland.</p>
 
         <p class="tagline italic">Echohaus <span class="italic">is</span> wherever the emotion hits.</p>
 
@@ -30,6 +34,11 @@
             <a href="mailto:studio@echohaushq.com" class="contact-btn" title="Reach out with questions or ideas.">📩 CONTACT STUDIO</a>
             <a href="mailto:book@echohaushq.com" class="apply-btn" title="Start your creative journey with Echohaus.">APPLY NOW</a>
         </div>
+
+        <section class="location">
+            <h2>Studio Location</h2>
+            <p>Echohaus is based in Havre de Grace, MD and serves the surrounding Baltimore and Philadelphia areas with mobile and remote recording sessions.</p>
+        </section>
 
         <footer>
             <a href="https://glasswallrecords.com" target="_blank" class="footer-link">Powered by GLASSWALL</a>
