--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
     <meta name="ICBM" content="39.5493, -76.0916">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "RecordingStudio",
+      "name": "Echohaus",
+      "image": "https://echohaushq.com/logo.png",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Havre de Grace",
+        "addressRegion": "MD",
+        "addressCountry": "US"
+      },
+      "url": "https://echohaushq.com",
+      "description": "Echohaus is a mobile and remote recording studio based in Havre de Grace, MD. We specialize in artist development, vocal tracking, and mixing.",
+      "telephone": "",
+      "email": "studio@echohaushq.com"
+    }
+    </script>
 </head>
 <body>
     <div class="container fade-in">
@@ -40,8 +60,22 @@
             <p>Echohaus is based in Havre de Grace, MD and serves the surrounding Baltimore and Philadelphia areas with mobile and remote recording sessions.</p>
         </section>
 
+        <section class="map">
+            <h2>Find Us</h2>
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3083.7721020511236!2d-76.09381238462287!3d39.549300179478286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c82f0b95de7b01%3A0x69dc77ae91a7db89!2sHavre%20De%20Grace%2C%20MD!5e0!3m2!1sen!2sus!4v1713099999999"
+                width="100%" 
+                height="250" 
+                style="border:0; border-radius: 10px; margin-top: 20px;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </section>
+
         <footer>
             <a href="https://glasswallrecords.com" target="_blank" class="footer-link">Powered by GLASSWALL</a>
+            <p><a href="https://yelp.com" target="_blank" style="color:#888; text-decoration: none;">Leave us a review on Yelp</a></p>
         </footer>
     </div>
 </body>
