--- a/index.html
+++ b/index.html
@@ -1,102 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Echohaus is a mobile and remote creative studio based in Havre de Grace, MD. Powered by Glasswall.">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Echohaus is a mobile and remote creative studio offering mobile recording, vocal coaching, mixing, and creative direction."/>
+  <meta name="keywords" content="Echohaus, recording studio, mobile studio, vocal coaching, music production, Havre de Grace, Baltimore, Philadelphia"/>
+  <meta name="author" content="Echohaus"/>
   <title>Echohaus | Creative Studio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <style>
     body {
+      background-color: #111;
+      color: #eee;
+      font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #111;
-      color: #f5f5f5;
-      font-family: 'Playfair Display', serif;
       text-align: center;
     }
-    h1 {
-      font-size: 3rem;
-      margin-top: 60px;
-      letter-spacing: 2px;
+    h1, h2, h3 {
+      font-family: 'Playfair Display', serif;
+      font-weight: 700;
+      margin: 30px 0 10px;
     }
     p {
-      max-width: 600px;
-      margin: 20px auto;
-      line-height: 1.7;
-      font-size: 1.1rem;
-    }
-    em {
-      font-style: italic;
-    }
-    .section {
-      margin-top: 60px;
-    }
-    .services {
-      margin-top: 30px;
-    }
-    .services h2 {
-      letter-spacing: 5px;
-      margin-bottom: 20px;
-    }
-    .services ul {
-      list-style: none;
-      padding: 0;
-    }
-    .services li {
       margin: 10px 0;
     }
-    .buttons {
-      margin-top: 40px;
+    .italic {
+      font-style: italic;
     }
-    .buttons a {
-      display: inline-block;
-      margin: 0 10px;
-      padding: 12px 24px;
-      border: 1px solid #f5f5f5;
-      color: #f5f5f5;
+    .button-group {
+      margin: 30px 0;
+    }
+    .button {
+      padding: 10px 20px;
+      margin: 10px;
+      border: 1px solid #fff;
+      background: none;
+      color: #fff;
+      font-family: 'Inter', sans-serif;
+      font-size: 14px;
+      text-transform: uppercase;
       text-decoration: none;
-      font-weight: bold;
-      transition: background-color 0.3s ease, color 0.3s ease;
+      display: inline-block;
+      transition: all 0.3s ease;
     }
-    .buttons a:hover {
-      background-color: #f5f5f5;
+    .button:hover {
+      background-color: #fff;
       color: #111;
     }
-    footer {
-      margin-top: 60px;
-      font-size: 0.9rem;
-      color: #aaa;
+    .footer {
+      margin-top: 50px;
+      font-size: 13px;
+      color: #888;
     }
-    footer a {
+    a {
       color: #aaa;
-      text-decoration: underline;
+      text-decoration: none;
+    }
+    a:hover {
+      color: #fff;
     }
   </style>
 </head>
 <body>
+
   <h1>ECHOHAUS</h1>
-  <p><em>A creative studio experience. Built on presence, not just place.</em></p>
+  <p class="italic">A creative studio experience. Built on presence, not just place.</p>
+
   <p>Remote sessions. Mobile tracking,<br>Artist development.</p>
-  <p><em>Echohaus is wherever the emotion hits.</em></p>
+  <p class="italic">Echohaus is wherever the emotion hits.</p>
 
-  <div class="section services">
-    <h2>SERVICES</h2>
-    <ul>
-      <li>Mobile Recording</li>
-      <li>Vocal Coaching / Development</li>
-      <li>Mixing / Song Polish</li>
-      <li>Creative Direction</li>
-    </ul>
+  <h2>SERVICES</h2>
+  <p>Mobile Recording</p>
+  <p>Vocal Coaching / Development</p>
+  <p>Mixing / Song Polish</p>
+  <p>Creative Direction</p>
+
+  <div class="button-group">
+    <a href="mailto:studio@echohaushq.com" class="button">Contact Studio</a>
+    <a href="mailto:book@echohaushq.com" class="button">Apply Now</a>
   </div>
 
-  <div class="buttons">
-    <a href="mailto:studio@echohaushq.com">Contact Studio</a>
-    <a href="mailto:book@echohaushq.com">Apply Now</a>
-  </div>
+  <h3>Areas Served</h3>
+  <p>Havre de Grace, MD</p>
+  <p>Baltimore, MD</p>
+  <p>Philadelphia, PA</p>
+  <p>Delaware County, PA</p>
+  <p>Cecil County, MD</p>
+  <p>Harford County, MD</p>
 
-  <footer>
+  <div class="footer">
     <p><a href="https://glasswallrecords.com" target="_blank">Powered by GLASSWALL</a></p>
-  </footer>
+  </div>
+
 </body>
 </html>
